[package]
authors = ["Tangram <root@tangram.xyz"]
description = "Build terminal user interfaces in Rust."
documentation = "https://docs.rs/tortoise"
edition = "2018"
homepage = "https://github.com/tangramxyz/tortoise"
license = "MIT"
name = "tortoise"
publish = true
repository = "https://github.com/tangramxyz/tortoise"
version = "0.1.0"

[lib]
path = "lib.rs"

[dependencies]
bitflags = "1"
once_cell = "1"
ndarray = { version = "0.15", features = ["rayon"] }
num = "0.4"
regex = "1"
anyhow = { version = "1", features = ["backtrace"] }
tangram_zip = { path = "../zip" }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["consoleapi", "handleapi", "processenv", "winbase", "wincon"] }
