[package]
authors = ["Tangram <root@tangram.dev"]
description = "Build terminal user interfaces in Rust."
documentation = "https://docs.rs/tortoise"
edition = "2018"
homepage = "https://github.com/tangramdotdev/tortoise"
license = "MIT"
name = "tortoise"
publish = true
repository = "https://github.com/tangramdotdev/tortoise"
version = "0.1.0"

[lib]
path = "lib.rs"

[dependencies]
anyhow = { version = "1", features = ["backtrace"] }
bitflags = "1"
itertools = "0.10"
ndarray = { version = "0.15", features = ["rayon"] }
num = "0.4"
once_cell = "1"
regex = "1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["consoleapi", "handleapi", "processenv", "winbase", "wincon"] }
